--- a/pom.xml
+++ b/pom.xml
@@ -123,11 +123,19 @@
 	</dependency>
 
 	  <!-- 测试相关包 -->
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.12</version>
-      </dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+	</dependency>
+	
+	<!-- serveletapi -->
+	<dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>4.0.0-b07</version>
+    	<scope>provided</scope>
+	</dependency>
 
   </dependencies>
   <build>
