TODO：access_token生成

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,22 @@
 		 xmlns="http://java.sun.com/xml/ns/javaee" 
 		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
 		 id="WebApp_ID" version="3.0">
-		 
+
+	<!-- 配置springMVC的前端控制器 -->
+	<servlet>
+		<servlet-name>springMVC</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:spring/springmvc.xml</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>springMVC</servlet-name>
+		<!-- <url-pattern>使用/来匹配可以实现RESTFUL风格的url 但是对于静态文件的配置不让DispathcerServelet处理-->
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+
 	<!-- 加载spring容器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoader</listener-class>
@@ -13,11 +28,6 @@
 		<param-value>classpath:spring/applicationContext-*.xml</param-value>
 	</context-param>
 	
-	<!-- 配置springMVC的前端控制器 -->
-	<servlet-mapping>
-  	<servlet-name>Dispatcher</servlet-name>
-  	<!-- <url-pattern>使用/来匹配可以实现RESTFUL风格的url 但是对于静态文件的配置不让DispathcerServelet处理-->
-  	<url-pattern>/</url-pattern>
-	</servlet-mapping>
+
 	
 </web-app>
