--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,18 @@
     	<scope>provided</scope>
 	</dependency>
 
+	  <!-- 二维码相关包 -->
+	<dependency>
+    	<groupId>com.google.zxing</groupId>
+    	<artifactId>core</artifactId>
+    	<version>3.3.0</version>
+	</dependency>
+	<dependency>
+    	<groupId>com.google.zxing</groupId>
+    	<artifactId>javase</artifactId>
+    	<version>3.3.0</version>
+	</dependency>
+
   </dependencies>
   <build>
     <finalName>ssm</finalName>
