--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,8 @@
 		<version>1.7.21</version>
 	</dependency>
     
-    <!-- JSON相关包 -->
-    <dependency>
+    <!-- JSON相关包 以下是spring3.x版本使用jackson-->
+<!--    <dependency>
     	<groupId>org.codehaus.jackson</groupId>
     	<artifactId>jackson-core-asl</artifactId>
     	<version>1.9.13</version>
@@ -120,6 +120,23 @@
     	<groupId>org.codehaus.jackson</groupId>
     	<artifactId>jackson-mapper-asl</artifactId>
     	<version>1.9.13</version>
+	</dependency>-->
+
+	<!-- JSON相关包 以下是spring4.x以后版本使用jackson -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.8.9</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-core</artifactId>
+		<version>2.8.9</version>
+	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.8.9</version>
 	</dependency>
 	<dependency>
     	<groupId>net.sf.json-lib</groupId>
