--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,13 @@
 		<artifactId>hibernate-validator</artifactId>
 		<version>5.4.1.Final</version>
 	</dependency>
+	<!-- 文件上传相关包 -->
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.3</version>
+	</dependency>
+
   </dependencies>
   <build>
     <finalName>ssm</finalName>
