修改db.properties使其能够对c3p0连接池修改

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,3 +5,9 @@ jdbc.username=root
 jdbc.password=Asd564335
 
 # c3p0…Ë÷√
+c3p0.initialPoolSize=3
+c3p0.minPoolSize=10
+c3p0.maxPoolSize=30
+c3p0.acquireIncrement=2
+c3p0.maxIdleTime=5000
+c3p0.idleConnectionTestPeriod=60
