--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,20 @@
                      <target>1.8</target>
               </configuration>
        </plugin>
+		<plugin>
+			<groupId>org.apache.tomcat.maven</groupId>
+			<artifactId>tomcat7-maven-plugin</artifactId>
+			<version>2.2</version>
+
+			<configuration>
+				<url>http://123.207.142.45:8080/manager/text</url>
+				<username>admin</username>
+				<password>password</password>
+				<update>true</update>
+				<path>/webapp</path>
+			</configuration>
+
+		</plugin>
     </plugins>
   </build>
 </project>
