新增redis缓存支持

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -11,3 +11,17 @@ c3p0.maxPoolSize=30
 c3p0.acquireIncrement=2
 c3p0.maxIdleTime=5000
 c3p0.idleConnectionTestPeriod=60
+
+# redis配置
+#最大分配的对象数
+redis.pool.maxTotal=200
+#最大能够保持idel状态的对象数
+redis.pool.maxIdle=50
+redis.pool.minIdle=10
+redis.pool.maxWaitMillis=20000
+redis.host = 127.0.0.1
+redis.port = 6379
+redis.timeout=30000
+redis.password = a564335
+redis.database = 0  
+
