--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 		<version>5.1.26</version>
     </dependency>
     
-    <!-- 数据库连接池c3p0 -->
+    <!-- sql数据库连接池c3p0 -->
     <dependency>
     	<groupId>com.mchange</groupId>
     	<artifactId>c3p0</artifactId>
@@ -109,18 +109,6 @@
 		<artifactId>slf4j-api</artifactId>
 		<version>1.7.21</version>
 	</dependency>
-    
-    <!-- JSON相关包 以下是spring3.x版本使用jackson-->
-<!--    <dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-    	<artifactId>jackson-core-asl</artifactId>
-    	<version>1.9.13</version>
-	</dependency>
-	<dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-    	<artifactId>jackson-mapper-asl</artifactId>
-    	<version>1.9.13</version>
-	</dependency>-->
 
 	<!-- JSON相关包 以下是spring4.x以后版本使用jackson -->
 	<dependency>
@@ -178,12 +166,20 @@
 		<artifactId>hibernate-validator</artifactId>
 		<version>5.4.1.Final</version>
 	</dependency>
+
 	<!-- 文件上传相关包 -->
 	<dependency>
 		<groupId>commons-fileupload</groupId>
 		<artifactId>commons-fileupload</artifactId>
 		<version>1.3.3</version>
+
 	</dependency>
+	  <!-- redis相关包 -->
+	  <dependency>
+		  <groupId>redis.clients</groupId>
+		  <artifactId>jedis</artifactId>
+		  <version>2.9.0</version>
+	  </dependency>
 
   </dependencies>
   <build>
