--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,13 @@
 		  <version>2.9.0</version>
 	  </dependency>
 
+	  <!-- mybatis逆向工程 -->
+	  <dependency>
+		  <groupId>org.mybatis.generator</groupId>
+		  <artifactId>mybatis-generator-core</artifactId>
+		  <version>1.3.5</version>
+	  </dependency>
+
   </dependencies>
   <build>
     <finalName>ssm</finalName>
@@ -198,7 +205,6 @@
 			<groupId>org.apache.tomcat.maven</groupId>
 			<artifactId>tomcat7-maven-plugin</artifactId>
 			<version>2.2</version>
-
 			<configuration>
 				<url>http://123.207.142.45:8080/manager/text</url>
 				<username>admin</username>
@@ -206,7 +212,36 @@
 				<update>true</update>
 				<path>/webapp</path>
 			</configuration>
-
+		</plugin>
+		<plugin>
+			<groupId>org.mybatis.generator</groupId>
+			<artifactId>mybatis-generator-maven-plugin</artifactId>
+			<version>1.3.5</version>
+			<configuration>
+				<configurationFile>src/main/resources/mybatis/configuration.xml</configurationFile>
+				<verbose>true</verbose>
+				<overwrite>true</overwrite>
+			</configuration>
+			<executions>
+				<execution>
+					<id>Generate MyBatis Artifacts</id>
+					<goals>
+						<goal>generate</goal>
+					</goals>
+				</execution>
+			</executions>
+			<dependencies>
+				<dependency>
+					<groupId>org.mybatis.generator</groupId>
+					<artifactId>mybatis-generator-core</artifactId>
+					<version>1.3.5</version>
+				</dependency>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>5.1.26</version>
+				</dependency>
+			</dependencies>
 		</plugin>
     </plugins>
   </build>
