--- a/pom.xml
+++ b/pom.xml
@@ -74,16 +74,16 @@
     <dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.26</version>
+		<version>5.1.43</version>
     </dependency>
-    
-    <!-- sql数据库连接池c3p0 -->
-    <dependency>
-    	<groupId>com.mchange</groupId>
-    	<artifactId>c3p0</artifactId>
-    	<version>0.9.5.2</version>
-	</dependency>
-    
+
+	<!-- sql数据库连接池druid -->
+		<dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>druid</artifactId>
+		  <version>1.0.29</version>
+		</dependency>
+
 	<!-- Spring集成MyBatis -->
 	<dependency>
 		<groupId>org.mybatis</groupId>
@@ -227,7 +227,7 @@
 				<dependency>
 					<groupId>mysql</groupId>
 					<artifactId>mysql-connector-java</artifactId>
-					<version>5.1.26</version>
+					<version>5.1.43</version>
 				</dependency>
 			</dependencies>
 		</plugin>
