--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,13 +4,12 @@ jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
 jdbc.password=Asd564335
 
-# c3p0设置
-c3p0.initialPoolSize=3
-c3p0.minPoolSize=10
-c3p0.maxPoolSize=30
-c3p0.acquireIncrement=2
-c3p0.maxIdleTime=5000
-c3p0.idleConnectionTestPeriod=60
+# druid设置
+druid.initialSize=5
+druid.minIdle=10
+druid.maxActive=20
+druid.maxWait=60000
+druid.timeBetweenEvictionRunsMillis=60000
 
 # redis配置
 #最大分配的对象数
@@ -19,9 +18,9 @@ redis.pool.maxTotal=200
 redis.pool.maxIdle=50
 redis.pool.minIdle=10
 redis.pool.maxWaitMillis=20000
-redis.host = 127.0.0.1
-redis.port = 6379
+redis.host=127.0.0.1
+redis.port=6379
 redis.timeout=30000
-redis.password = a564335
-redis.database = 0  
+redis.password=a564335
+redis.database=0
 
