add Role Based Access Control

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,20 +1,20 @@
-# Êı¾İ¿âÁ¬½ÓÉèÖÃ
+# ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
 jdbc.password=Asd564335
 
-# druidÉèÖÃ
+# druidï¿½ï¿½ï¿½ï¿½
 druid.initialSize=5
 druid.minIdle=10
-druid.maxActive=20
+druid.maxActive=200
 druid.maxWait=60000
 druid.timeBetweenEvictionRunsMillis=60000
 
-# redisÅäÖÃ
-#×î´ó·ÖÅäµÄ¶ÔÏóÊı
+# redisï¿½ï¿½ï¿½ï¿½
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¶ï¿½ï¿½ï¿½ï¿½ï¿½
 redis.pool.maxTotal=200
-#×î´óÄÜ¹»±£³Öidel×´Ì¬µÄ¶ÔÏóÊı
+#ï¿½ï¿½ï¿½ï¿½Ü¹ï¿½ï¿½ï¿½ï¿½ï¿½idel×´Ì¬ï¿½Ä¶ï¿½ï¿½ï¿½ï¿½ï¿½
 redis.pool.maxIdle=50
 redis.pool.minIdle=10
 redis.pool.maxWaitMillis=20000
