--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,19 @@
 		<artifactId>mybatis-generator-core</artifactId>
 		<version>1.3.5</version>
 	</dependency>
+	  <!-- 图像处理相关包 -->
+	  <dependency>
+		  <groupId>net.coobird</groupId>
+		  <artifactId>thumbnailator</artifactId>
+		  <version>0.4.8</version>
+	  </dependency>
+
+	  <!-- JVM监控包 -->
+	  <dependency>
+		  <groupId>net.bull.javamelody</groupId>
+		  <artifactId>javamelody-core</artifactId>
+		  <version>1.69.0</version>
+	  </dependency>
 
   </dependencies>
   <build>
@@ -189,18 +202,6 @@
 				     <encoding>UTF-8</encoding>
               </configuration>
        </plugin>
-		<plugin>
-			<groupId>org.apache.tomcat.maven</groupId>
-			<artifactId>tomcat7-maven-plugin</artifactId>
-			<version>2.2</version>
-			<configuration>
-				<url>http://123.207.142.45:8080/manager/text</url>
-				<username>admin</username>
-				<password>password</password>
-				<update>true</update>
-				<path>/webapp</path>
-			</configuration>
-		</plugin>
 		<plugin>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator-maven-plugin</artifactId>
